# KUKA_DAR

./: .gitignore  CMakeLists.txt  README.md
LAB_DATA/AW_comp/: plots.m
LAB_DATA/AW_comp/OPT1_IM2/: plots_control.m
LAB_DATA/AW_comp/OPT1_IM2/DC_0.5/: control_DAR.txt  error.txt
LAB_DATA/AW_comp/OPT1_IM2/DC_1/: Q.txt  control_DAR.txt  error.txt  plots.m
LAB_DATA/AW_comp/OPT1_IM2/DC_1.5/: control_DAR.txt  error.txt
LAB_DATA/AW_comp/OPT1_IM2/DC_1.5_2Kg/: control_DAR.txt  error.txt
LAB_DATA/AW_comp/OPT1_IM2/DC_1.5_2Kg_wrong/: control_DAR.txt  error.txt
LAB_DATA/AW_comp/OPT1_IM3/: plots_control.m
LAB_DATA/AW_comp/OPT1_IM3/DC_0.5/: Q.txt  control_DAR.txt  error.txt
LAB_DATA/AW_comp/OPT1_IM3/DC_1/: control_DAR.txt  error.txt
LAB_DATA/AW_comp/OPT1_IM3/DC_1.5/: control_DAR.txt  error.txt
LAB_DATA/AW_comp/OPT1_IM3/DC_1.5_2Kg_wrong/: Q.txt  control_DAR.txt  error.txt
LAB_DATA/AW_comp/OPT2_IM2/: plots.m
LAB_DATA/AW_comp/OPT2_IM2/DC_0.5/: control_DAR.txt  error.txt
LAB_DATA/AW_comp/OPT2_IM2/DC_1/: control_DAR.txt  error.txt
LAB_DATA/AW_comp/OPT2_IM2/DC_1.5/: control_DAR.txt  error.txt
LAB_DATA/AW_comp/OPT2_IM3/DC_0.5/: control_DAR.txt  error.txt
LAB_DATA/AW_comp/OPT2_IM3/DC_1/: control_DAR.txt  error.txt
LAB_DATA/AW_comp/OPT2_IM3/DC_1.5/: control_DAR.txt  error.txt
LAB_DATA/DAR_full/: plots_error.m
LAB_DATA/DAR_full/no_mass/: control_DAR.txt  dQ.txt  error.txt
LAB_DATA/DAR_full/with_mass/: control_DAR.txt  dQ.txt  error.txt
LAB_DATA/DAR_observer/tau_1/: Q.txt  Q_hat.txt  control_DAR.txt  dQ.txt  dQ_hat.txt  error.txt  qhat_DAR.txt
LAB_DATA/DAR_observer/tau_11/: Q.txt  Q_hat.txt  control_DAR.txt  dQ.txt  dQ_hat.txt  error.txt  qhat_DAR.txt
LAB_DATA/DAR_observer/tau_1_mathced/: Q.txt  Q_hat.txt  control_DAR.txt  dQ.txt  dQ_hat.txt  error.txt  qhat_DAR.txt
LAB_DATA/DAR_observer/tau_21/: Q.txt  Q_hat.txt  control_DAR.txt  dQ.txt  dQ_hat.txt  error.txt  plots_obs_DAR.m  qhat_DAR.txt
LAB_DATA/Exp_28_08/full_info_obs/: Q.txt  control_DAR.txt  dQ.txt  error.txt
LAB_DATA/Exp_28_08/saturation+AW_1/Case_1/: control_DAR.txt  dQ.txt  error.txt
LAB_DATA/Exp_28_08/saturation+AW_1/Case_2/: control_DAR.txt  dQ.txt  error.txt
LAB_DATA/Exp_28_08/saturation+AW_1/Case_3/: control_DAR.txt  d2Q.txt  dQ.txt  error.txt
LAB_DATA/Exp_28_08/saturation+AW_1/Case_4/: control_DAR.txt  dQ.txt  error.txt
LAB_DATA/Exp_28_08/saturation+AW_2/Case_1/: control_DAR.txt  dQ.txt  error.txt
LAB_DATA/Exp_28_08/saturation+AW_2/Case_2/: Q.txt  control_DAR.txt  dQ.txt  error.txt
LAB_DATA/Exp_28_08/saturation+AW_2/Case_3/: control_DAR.txt  dQ.txt  error.txt
LAB_DATA/KUKA_traj/: main_DAR_observer.cpp
LAB_DATA/KUKA_traj/exp_traj/: Q.txt  Q_hat.txt  control_DAR.txt  dQ.txt  dQ_hat.txt  error.txt  qhat_DAR.txt
LAB_DATA/KUKA_traj/periodic_f4/: control_DAR.txt  dQ.txt  dQ_hat.txt  qhat_DAR.txt
LAB_DATA/KUKA_traj/saw_traj/: Q.txt  Q_hat.txt  control_DAR.txt  dQ.txt  dQ_hat.txt  error.txt  qhat_DAR.txt
include/controller/: controller.hpp  controller_kuka.hpp
src/: main_DAR.cpp  main_DAR_AW.cpp  main_DAR_full.cpp  main_DAR_observer.cpp  main_DAR_sat.cpp
src/controller/: controller_kuka.cpp
(+4 files in other folders)
